tests/pos/test-vardecl.dic
class TestFuncDecl {
    func int main() {
        int i = 1;
        printint(i);
        
        return 0;
    }
}