tests/neg/test-types-not-matching.dic
class TestTypes {
    func int main() {
        int i = "1";
        return 0;
    }
}